--- a/src/app/shared/error-page/error-page.component.html
+++ b/src/app/shared/error-page/error-page.component.html
@@ -1,20 +1,84 @@
-<p>Pagina de Inicio</p>
+<section class="content">
+    <div class="container">
+        <h1></h1>
+        <p>Esta es la página de inicio.</p>
 
-<ul>
-    <li>
-        <a routerLink="/auth/login">
-            Ir a Login
-          </a>
-    </li>
-    <li>
-        <a routerLink="/auth/registro">
-            Registro
-        </a>
-    </li>
-    <li>
-        <a routerLink="/componentes/home">
-            Home
-        </a>
-    </li>
-</ul>
+        <ul>
+            <li>
+                <a routerLink="/auth/login">Ir a Login</a>
+            </li>
+            <li>
+                <a routerLink="/auth/registro">Registro</a>
+            </li>
+            <!--
+                <li>
+                    <a routerLink="/componentes/home">Home</a>
+                </li>
+            -->
+        </ul>
+    </div>
+</section>
+<section class="content">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class="card text-center">
+                    <img src="/assets/img/dental.png" style="height: 60px; width: 60px; margin-left: auto;
+                margin-right: auto; margin-top: 15px;" alt="" class="card-img-top">
+                    <h3>Satisfaccion Garantizada</h3>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class="card text-center">
+                    <img src="/assets/img/dental.png" style="height: 60px; width: 60px; margin-left: auto;
+                margin-right: auto; margin-top: 15px;" alt="" class="card-img-top">
+                    <h3>Tecnologia de punta</h3>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class="card text-center">
+                    <img src="/assets/img/dental.png" style="height: 60px; width: 60px; margin-left: auto;
+                margin-right: auto; margin-top: 15px;" alt="" class="card-img-top">
+                    <h3>Expertos Dentales</h3>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container mt-5">
+        <div class="row text-center">
+            <div class="col">
+                <h3>Nuestro Equipo</h3>
+                <h2>Una Clinica en la que puedes confiar.</h2>
+                <p>
+                    En <strong>NombreClinica</strong>, nuestro equipo está comprometido a proporcionar servicios dentales excepcionales con un enfoque en la comodidad y el bienestar de nuestros pacientes.
+                    Contamos con una amplia gama de tratamientos dentales y especialidades odontológicas para ofrecer un diagnóstico y tratamiento de calidad a ti y toda tu familia.
+                    Nuestro compromiso es garantizar tu satisfacción y confianza en cada visita.
+                  </p>
+            </div>
+            <div class="col">
+                <h3>aqui poner datos</h3>
 
+            </div>
+   
+        </div>
+    </div>
+
+<!--<section class="content">-->
+    <div class="container mt-5">
+        <div class="row text-center">
+            <div class="col">
+                <h3>Nuestro Equipo</h3>
+                <h2>Una Clinica en la que puedes confiar.</h2>
+                <p>
+                    En <strong>NombreClinica</strong>, contamos con un equipo de profesionales altamente capacitados y apasionados por la odontología.
+                    Nuestra misión es brindar atención dental de alta calidad, utilizando tecnología de punta y enfoques innovadores para asegurar tu salud bucal.
+                    Confía en nosotros para tus necesidades dentales, estamos aquí para cuidar de ti y tu sonrisa.
+                  </p>
+            </div>
+            <div class="col">
+                <h3>aqui poner datos</h3>
+
+            </div>
+        </div>
+    </div>
+</section>
