--- a/src/app/componentes/pages/agenda/agenda.component.html
+++ b/src/app/componentes/pages/agenda/agenda.component.html
@@ -10,45 +10,55 @@
                 </div>
             </div>
             <div class="card-body">
-                <form>
-                    <div *ngIf="showProfesional" id="showProfesional" class="formContainer">
-                        <form>
-                            <div class="form-group">
+                <form *ngIf="showProfesional" id="showProfesional" class="formContainer">
+                    <div class="form-group">
+                        <div class="row mb-2 mt-3">
+                            <label for="name">Ingrese Profesional:</label>
+                            <!--<input type="text" class="form-control" name='name' placeholder="Dr. Carlos Fantuzi"/>-->
+                            <select class="form-control" name="profesionales">
+                                <option>Dr. Juan Perez</option>
+                                <option >Dra. Maria Rodriguez</option>
+                                <option >Dr. Carlos Gonzalez</option>
+                                <option >Dra. Laura Sanchez</option>
+                                <option >Dr. Luis Martinez</option>
 
-                                <div class="row mb-2 mt-3">
-                                    <label for="name">Ingrese Profesional:</label>
-                                    <input type="text" class="form-control" name='name' placeholder="Dr. Carlos Fantuzi"/>
-                                </div>
-
-                                <div class="mt-3 text-center">
-                                    <button class="btn btn-primary active" type="submit" (click)="btnsig($event, isResult)">
-                                        Siguiente
-                                    </button>
-                                </div>
-
-                            </div>
-                        </form>
-                    </div>
-                    <div *ngIf="showEspecialidad" id="showEspecialidad" class="formContainer">
-                        <form>
-                            <div class="form-group">
-
-                                <div class="row mb-2 mt-3">
-                                    <label for="name">Ingrese Especialidad:</label>
-                                    <input type="text" class="form-control" name='name' placeholder="Ortodoncia"/>
-                                </div>
-
-                                <div class="mt-3 text-center">
-                                    <button class="btn btn-primary active" type="submit" (click)="btnsig($event, isResult)">
-                                        Siguiente
-                                    </button>
-                                </div>
-
-                            </div>
-                        </form>
+                                <!-- Agregar más opciones según sea necesario -->
+                            </select>
+                        </div>
+                        <div class="mt-3 text-center">
+                            <button class="btn btn-primary active" type="submit" (click)="btnsig($event, isResult)">
+                                Siguiente
+                            </button>
+                            <button class="btn btn-seundary active" type="submit" (click)="goBack()">
+                                Volver
+                            </button>
+                        </div>
                     </div>
                 </form>
-
+                <form *ngIf="showEspecialidad" id="showEspecialidad" class="formContainer">
+                    <div class="form-group">
+                        <div class="row mb-2 mt-3">
+                            <label for="name">Ingrese Especialidad:</label>
+                            <!--<input type="text" class="form-control" name='name' placeholder="Ortodoncia"/>-->
+                            <label for="service">Seleccione un servicio:</label>
+                            <select class="form-control" name="service">
+                                <option>Ortodoncia</option>
+                                <option >Cirugia Oral</option>
+                                <option >Endodoncia</option>
+                                <option >Limpieza</option>
+                                <option >Odontopediatria</option>
+                            </select>
+                        </div>
+                        <div class="mt-3 text-center">
+                            <button class="btn btn-primary active" type="submit" (click)="btnsig($event, isResult)">
+                                Siguiente
+                            </button>
+                            <button class="btn btn-seundary active" type="submit" (click)="goBack()">
+                                Volver
+                            </button>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
@@ -58,73 +68,26 @@
         <div class="card mt-4">
             <div class="card-header text-center">
                 <div class="btn-group btn-group-justified tabs">
-    
                 </div>
             </div>
             <div class="card-body">
-                <form>
-                    <div class="formContainer">
-                        <form>
-                            <div class="form-group">
-
-                                <div class="row mb-2 mt-3">
-                                    <label for="name">Estos son los horarios disponibles:</label>
-                                    <!-- Agregar una tabla donde se muestre los horarios -->
-                                </div>
-
-                                <div class="mt-3 text-center">
-                                    <button class="btn btn-primary active" type="submit" (click)="btnsig($event, isResult)">
-                                        Siguiente
-                                    </button>
-                                </div>
-
-                            </div>
-                        </form>
+                <div class="formContainer">
+                    <div class="form-group">
+                        <div class="row mb-2 mt-3">
+                            <label for="name">Estos son los horarios disponibles:</label>
+                            <!-- Agregar una tabla donde se muestre los horarios -->
+                        </div>
+                        <div class="mt-3 text-center">
+                            <button class="btn btn-primary active" type="submit" (click)="btnsig($event, isResult)">
+                                Siguiente
+                            </button>
+                            <button class="btn btn-seundary active" type="submit" (click)="goBack()">
+                                Volver
+                            </button>
+                        </div>
                     </div>
-
-                </form>
-
-            </div>
-        </div>
-    </div>
-    <div class="col-md-8 mx-auto" *ngIf="isResult">
-        <!--Lista con profesionales y hora disponible-->
-        <div class="card mt-4">
-            <div class="card-header text-center">
-                <div class="btn-group btn-group-justified tabs">
-    
                 </div>
             </div>
-            <div class="card-body">
-                <form>
-                    <div class="formContainer">
-                        <form>
-                            <div class="form-group">
-
-                                <div class="row mb-2 mt-3">
-                                    <label for="name">Estos son los horarios disponibles:</label>
-                                    <!-- Agregar una tabla donde se muestre los horarios -->
-                                </div>
-
-                                <div class="mt-3 text-center">
-                                    <button class="btn btn-primary active" type="submit">
-                                        Siguiente
-                                    </button>
-                                </div>
-
-                            </div>
-                        </form>
-                    </div>
-
-                </form>
-
-            </div>
         </div>
     </div>
-
 </div>
-
-
-
-
-
