--- a/src/app/shared/error-page/error-page.component.html
+++ b/src/app/shared/error-page/error-page.component.html
@@ -1,8 +1,34 @@
-<section class="content">
-    <div class="container">
+<header class="header">
+    <div class="container logo-nav-container">
+        <a href="" class="logo">Nombre Clinica</a>
+        <nav class="navigation">
+            <ul>
+                <li>
+                    <!--<a [routerLink]="['/']" [routerLinkActive]="['actived']">Home</a>-->
+                </li>
+                <li>
+                    <a [routerLink]="['/auth/login']" [routerLinkActive]="['actived']">Iniciar Sesion</a>
+                </li>
+                <li>
+                    <a [routerLink]="['/auth/registro']" [routerLinkActive]="['actived']">Registrarse</a>
+                </li>
+                <li>
+                    <!--<a [routerLink]="['/registro']" [routerLinkActive]="['actived']">Registro</a>-->
+                </li>
+                <li>
+                    <!--<a [routerLink]="['/login']" [routerLinkActive]="['actived']">Login</a>-->
+                </li>
+            </ul>
+        </nav>
+    </div>
+</header>
+<!--
+
+    <section class="content">
+        <div class="container">
         <h1></h1>
         <p>Esta es la página de inicio.</p>
-
+        
         <ul>
             <li>
                 <a routerLink="/auth/login">Ir a Login</a>
@@ -10,14 +36,15 @@
             <li>
                 <a routerLink="/auth/registro">Registro</a>
             </li>
-            <!--
+        
                 <li>
                     <a routerLink="/componentes/home">Home</a>
                 </li>
-            -->
+            
         </ul>
     </div>
 </section>
+-->
 <section class="content">
     <div class="container">
         <div class="row">
