--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -1,91 +1,89 @@
 
-<!--
-    <div class="container">
-    <h3>Inicia Sesion</h3>
-    <div class="row">
+<form class="login100-form"
+        autocomplete="off"
+        [formGroup]="miFormulario"
+        (ngSubmit)="login()">
 
-        <div class="col">
-
-        </div>
-
-        <div class="col">
-            <form action="#">
-                <div class="mb-4 mt-4">
-                    <label for="email" class="form-label">Correo Electronico</label>
-                    <input type="email" class="form-control" name="email">
-                </div>
-            
-                <div class="mb-4">
-                    <label for="password" class="form-label">Password</label>
-                    <input type="password" class="form-control" name="password">
-                </div>
-            
-                <div class="my-3">-->
-                    <!--<span>No tienes cuenta? <a [routerLink]="['/register']">Registrate</a></span>-->
-                   <!-- <span>No tienes cuenta?</span>
-                    <a routerLink="/auth/registro">Crear aqui</a>
-                </div>
-            </form>
-        </div>
-        <div class="col">
-            <div class="d-grid">
-               <button  type="submit" class="btn btn-primary" (click)="login()">Iniciar Sesion</button>
-            </div>
-        </div>
-    </div>
-</div>
-
--->
-
-
-
-<form class="login100-form" 
-      autocomplete="off"
-      [formGroup]="miFormulario"
-      (ngSubmit)="login()">
-                
-    <span class="login100-form-title p-b-49">
-        Login
-    </span>
-
-    <div class="wrap-input100 m-b-23">
-        <span class="label-input100">Email</span>
-        <input class="input100"
-               type="email" 
-               formControlName="email"
-               placeholder="Ingrese su email">
-        <span class="focus-input100"></span>
-    </div>
-
-    <div class="wrap-input100">
-        <span class="label-input100">Password</span>
-        <input class="input100"
-               type="password"
-               formControlName="password"
-               placeholder="Ingrese su contraseña">
-        <span class="focus-input100"></span>
-    </div>
+    <div class="flex flex-column">
+        <span class="text-lg mb-4">Inicia Sesion</span>
     
-    <div class="text-right p-t-8 p-b-31"></div>
+        <mat-form-field>
+            <mat-label>Email</mat-label>
+            <input type="email" formControlName="email" matInput placeholder="Ingrese su Email">
+        </mat-form-field>
+        
+        <mat-form-field>
+            <mat-label>Password</mat-label>
+            <input type="password" formControlName="password" matInput placeholder="Password">
+        </mat-form-field>
     
-    <div class="container-login100-form-btn">
-        <div class="wrap-login100-form-btn">
-            <div class="login100-form-bgbtn"></div>
-            <button class="login100-form-btn"
-                    type="submit"
-                    [disabled]="miFormulario.invalid">
-                Login
-            </button>
-        </div>
-    </div>
+        <button class="login100-form-btn" type="submit" [disabled]="miFormulario.invalid" mat-button mat-flat-button color="primary">
+            <mat-icon>save</mat-icon>
+            Login
+        </button>
 
-    <div class="flex-col-c p-t-60">
-        <span class="txt1 p-b-17">
-            ¿No tienes cuenta?
-        </span>
-
-        <a routerLink="/auth/registro" class="txt2">
-            Crear una aquí
-        </a>
     </div>
 </form>
+
+<div class="flex justify-content-end mt-5">
+    <a routerLink="/auth/registro" class="txt2">
+        Crear una aquí
+    </a>
+</div>
+
+<!--
+
+    <form class="login100-form" 
+    autocomplete="off"
+    [formGroup]="miFormulario"
+          (ngSubmit)="login()">
+                    
+        <span class="login100-form-title p-b-49">
+            Login
+        </span>
+        
+        
+            <div class="wrap-input100 m-b-23">
+                <span class="label-input100">Email</span>
+                <input class="input100"
+                       type="email" 
+                       formControlName="email"
+                       placeholder="Ingrese su email">
+                <span class="focus-input100"></span>
+            </div>
+
+    
+            <div class="wrap-input100">
+                <span class="label-input100">Password</span>
+            <input class="input100"
+            type="password"
+                   formControlName="password"
+                   placeholder="Ingrese su contraseña">
+            <span class="focus-input100"></span>
+        </div>
+        
+        <div class="text-right p-t-8 p-b-31"></div>
+        
+        <div class="container-login100-form-btn">
+            <div class="wrap-login100-form-btn">
+                <div class="login100-form-bgbtn"></div>
+                <button class="login100-form-btn"
+                        type="submit"
+                        [disabled]="miFormulario.invalid">
+                    Login
+                </button>
+            </div>
+        </div>
+        
+        <div class="flex-col-c p-t-60">
+            <span class="txt1 p-b-17">
+                ¿No tienes cuenta?
+            </span>
+            
+            <a routerLink="/auth/registro" class="txt2">
+                Crear una aquí
+            </a>
+        </div>
+    </form>
+-->
+    
