--- a/src/app/auth/pages/registro/registro.component.html
+++ b/src/app/auth/pages/registro/registro.component.html
@@ -1,92 +1,58 @@
-<!--
+<form class="login100-form" autocomplete="off" [formGroup]="miFormulario" (ngSubmit)="registro()">
+    <div class="flex flex-column">
+        <span class="text-lg mb-4">Registro</span>
 
-<div class="container">
-    <h3>Registro</h3>
-    
-    <div class="row">
-        <div class="col">
+        <mat-form-field>
+            <mat-label>Nombre</mat-label>
+            <input type="text" formControlName="name" matInput placeholder="Ingrese su nombre">
+        </mat-form-field>
 
-        </div>
+        <mat-form-field>
+            <mat-label>Email</mat-label>
+            <input type="email" formControlName="email" matInput placeholder="Ingrese su Email">
+        </mat-form-field>
 
-        <div class="col">
-            <form>
-                <div class="mb-3">
-                <label for="" class="form-label">Nombre</label>
-                <input type="text" class="form-control" id="">
-                </div>
-            
-                <div class="mb-3">
-                <label for="" class="form-label">Apellidos</label>
-                <input type="text" class="form-control" id="">
-                </div>
-            
-                <div class="mb-3">
-                    <label for="" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="">
-                </div>
-            
-                <div class="mb-3">
-                    <label for="" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="">
-                </div>
-                <div class="mb-3">
-                    <label for="" class="form-label">Confirme Password</label>
-                    <input type="password" class="form-control" id="">
-                </div>
-            
-                <div>-->
-                    <!--<a [routerLink]="['/login']">Ya estoy registrado</a>-->
-          <!--          <a>ya estoy registrado</a>
-                </div>
-            
-                <button type="submit" class="btn btn-primary">Registrarse</button>
-            </form>
-        </div>
+        <mat-form-field>
+            <mat-label>Password</mat-label>
+            <input type="password" formControlName="password" matInput placeholder="Password">
+        </mat-form-field>
 
-        <div class="col">
-            
-        </div>
-
+        <button class="login100-form-btn" type="submit" [disabled]="miFormulario.invalid" mat-button mat-flat-button color="primary">
+            <mat-icon>save</mat-icon>
+            Registro
+        </button>
     </div>
-    
+</form>
+<div class="flex justify-content-end mt-5">
+    <a routerLink="/auth/login" class="txt2">
+        Ya tienes cuenta?
+    </a>
 </div>
--->
 
 
+<!-- 
 
-<form class="login100-form"
-      autocomplete="off"
-      [formGroup]="miFormulario"
-      (ngSubmit)="registro()">
-                
-    <span class="login100-form-title p-b-49">
-        Nuevo usuario
+    <form class="login100-form" autocomplete="off" [formGroup]="miFormulario" (ngSubmit)="registro()">
+        
+        <span class="login100-form-title p-b-49">
+            Nuevo usuario
     </span>
-
+    
     <div class="wrap-input100 m-b-23">
         <span class="label-input100">Nombre</span>
-        <input class="input100"
-               type="text" 
-               formControlName="name"
-               placeholder="Ingrese su nombre">
+        <input class="input100" type="text" formControlName="name" placeholder="Ingrese su nombre">
         <span class="focus-input100"></span>
     </div>
-
+    
     <div class="wrap-input100 m-b-23">
         <span class="label-input100">Email</span>
-        <input class="input100"
-               type="email" 
-               formControlName="email"
-               placeholder="Ingrese su email">
+        <input class="input100" type="email" formControlName="email" placeholder="Ingrese su email">
         <span class="focus-input100"></span>
     </div>
-
+    
     <div class="wrap-input100">
         <span class="label-input100">Password</span>
-        <input class="input100"
-               type="password"
-               formControlName="password"
-               placeholder="Ingrese su contraseña">
+        <input class="input100" type="password" formControlName="password" placeholder="Ingrese su contraseña">
         <span class="focus-input100"></span>
     </div>
     
@@ -95,21 +61,20 @@
     <div class="container-login100-form-btn">
         <div class="wrap-login100-form-btn">
             <div class="login100-form-bgbtn"></div>
-            <button class="login100-form-btn"
-                    type="submit"
-                    [disabled]="miFormulario.invalid">
+            <button class="login100-form-btn" type="submit" [disabled]="miFormulario.invalid">
                 Registro
             </button>
         </div>
     </div>
-
+    
     <div class="flex-col-c p-t-60">
         <span class="txt1 p-b-17">
             ¿Ya tienes una cuenta?
         </span>
-
+        
         <a routerLink="/auth" class="txt2">
             Ingresa aquí
         </a>
     </div>
 </form>
+-->
