--- a/src/app/componentes/pages/agenda/agenda.component.html
+++ b/src/app/componentes/pages/agenda/agenda.component.html
@@ -14,16 +14,9 @@
                     <div class="form-group">
                         <div class="row mb-2 mt-3">
                             <label for="name">Ingrese Profesional:</label>
-                            <!--<input type="text" class="form-control" name='name' placeholder="Dr. Carlos Fantuzi"/>-->
-                            <select class="form-control" name="profesionales">
-                                <option>Dr. Juan Perez</option>
-                                <option >Dra. Maria Rodriguez</option>
-                                <option >Dr. Carlos Gonzalez</option>
-                                <option >Dra. Laura Sanchez</option>
-                                <option >Dr. Luis Martinez</option>
-
-                                <!-- Agregar más opciones según sea necesario -->
-                            </select>
+                            <select class="form-control" name="profesionales" [(ngModel)]="selectedProfesional">
+                                <option *ngFor="let profesional of profesionales" [value]="profesional.id">{{ profesional.nombre }}</option>
+                              </select>
                         </div>
                         <div class="mt-3 text-center">
                             <button class="btn btn-primary active" type="submit" (click)="btnsig($event, isResult)">
@@ -41,12 +34,8 @@
                             <label for="name">Ingrese Especialidad:</label>
                             <!--<input type="text" class="form-control" name='name' placeholder="Ortodoncia"/>-->
                             <label for="service">Seleccione un servicio:</label>
-                            <select class="form-control" name="service">
-                                <option>Ortodoncia</option>
-                                <option >Cirugia Oral</option>
-                                <option >Endodoncia</option>
-                                <option >Limpieza</option>
-                                <option >Odontopediatria</option>
+                            <select class="form-control" name="especialidades" [(ngModel)]="selectedEspecialidad">
+                                <option *ngFor="let especialidad of especialidades" [value]="especialidad.id">{{ especialidad.nombre }}</option>
                             </select>
                         </div>
                         <div class="mt-3 text-center">
