--- a/src/app/componentes/pages/agenda/agenda.component.html
+++ b/src/app/componentes/pages/agenda/agenda.component.html
@@ -5,8 +5,10 @@
         <div class="card mt-4">
             <div class="card-header text-center">
                 <div class="btn-group btn-group-justified tabs">
-                    <a href="javascript:;" class="btn" (click)="getAccion($event, 'ingresadr')">Reserva por Profesional</a>
-                    <a href="javascript:;" class="btn" (click)="getAccion($event, 'ingresaes')">Reserva por Especialidad</a>
+                    <a href="javascript:;" class="btn" (click)="getAccion($event, 'ingresadr')">Reserva por
+                        Profesional</a>
+                    <a href="javascript:;" class="btn" (click)="getAccion($event, 'ingresaes')">Reserva por
+                        Especialidad</a>
                 </div>
             </div>
             <div class="card-body">
@@ -14,9 +16,10 @@
                     <div class="form-group">
                         <div class="row mb-2 mt-3">
                             <label for="name">Ingrese Profesional:</label>
-                            <select class="form-control" name="profesionales" [(ngModel)]="selectedProfesional">
-                                <option *ngFor="let profesional of profesionales" [value]="profesional.id">{{ profesional.nombre }}</option>
-                              </select>
+                            <select class="form-control" name="profesionales" [(ngModel)]="selectedProfesional" (change)="seleccionarProfesionalDesdeDropdown($event)">
+                                <option *ngFor="let profesional of profesionales" [value]="profesional._id">
+                                {{ profesional.nombre }}</option>
+                            </select>
                         </div>
                         <div class="mt-3 text-center">
                             <button class="btn btn-primary active" type="submit" (click)="btnsig($event, isResult)">
@@ -32,10 +35,9 @@
                     <div class="form-group">
                         <div class="row mb-2 mt-3">
                             <label for="name">Ingrese Especialidad:</label>
-                            <!--<input type="text" class="form-control" name='name' placeholder="Ortodoncia"/>-->
-                            <label for="service">Seleccione un servicio:</label>
                             <select class="form-control" name="especialidades" [(ngModel)]="selectedEspecialidad">
-                                <option *ngFor="let especialidad of especialidades" [value]="especialidad.id">{{ especialidad.nombre }}</option>
+                                <option *ngFor="let especialidad of especialidades" [value]="especialidad.id">{{
+                                    especialidad.nombre }}</option>
                             </select>
                         </div>
                         <div class="mt-3 text-center">
@@ -53,30 +55,52 @@
     </div>
 
     <div class="col-md-8 mx-auto" *ngIf="isResult">
-        <!--Lista con profesionales y hora disponible-->
-        <div class="card mt-4">
-            <div class="card-header text-center">
-                <div class="btn-group btn-group-justified tabs">
+        <div class="col-md-8 mx-auto" *ngIf="isResult">
+            <!--Lista con profesionales y hora disponible-->
+            <div class="card mt-4">
+                <div class="card-header text-center">
+                    <div class="btn-group btn-group-justified tabs"></div>
                 </div>
-            </div>
-            <div class="card-body">
-                <div class="formContainer">
-                    <div class="form-group">
-                        <div class="row mb-2 mt-3">
-                            <label for="name">Estos son los horarios disponibles:</label>
-                            <!-- Agregar una tabla donde se muestre los horarios -->
-                        </div>
-                        <div class="mt-3 text-center">
-                            <button class="btn btn-primary active" type="submit" (click)="btnsig($event, isResult)">
-                                Siguiente
-                            </button>
-                            <button class="btn btn-seundary active" type="submit" (click)="goBack()">
-                                Volver
-                            </button>
+                <div class="card-body">
+                    <div class="formContainer">
+                        <div class="form-group">
+                            <!-- Agregar un elemento para mostrar el nombre del profesional -->
+                            <div class="row mb-2 mt-3">
+                                <label for="profesional">Profesional:</label>
+                                <p id="profesional">{{ selectedProfesional.nombre }}</p>
+                            </div>
+                            <!-- Agregar una tabla donde se muestre las especialidades del profesional -->
+                            <div class="row mb-2 mt-3" *ngIf="especialidades.length > 0">
+                                <label for="name">Especialidades:</label>
+                                <table class="table table-striped">
+                                    <thead>
+                                        <tr>
+                                            <th scope="col">#</th>
+                                            <th scope="col">Especialidad</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr *ngFor="let especialidad of especialidades; let i = index">
+                                            <th scope="row">{{ i + 1 }}</th>
+                                            <td>{{ selectedProfesional.especialidades }}</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                            <div *ngIf="especialidades.length === 0" class="text-center">
+                                <p>No hay especialidades disponibles para este profesional.</p>
+                            </div>
+                            <div class="mt-3 text-center">
+                                <button class="btn btn-primary active" type="submit" (click)="btnsig($event, isResult)">
+                                    Siguiente
+                                </button>
+                                <button class="btn btn-seundary active" type="submit" (click)="goBack()">
+                                    Volver
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
