lista de especialidades por profesional seleccionado

--- a/src/app/componentes/pages/agenda/agenda.component.html
+++ b/src/app/componentes/pages/agenda/agenda.component.html
@@ -82,7 +82,7 @@
                                     <tbody>
                                         <tr *ngFor="let especialidad of especialidades; let i = index">
                                             <th scope="row">{{ i + 1 }}</th>
-                                            <td>{{ selectedProfesional.especialidades }}</td>
+                                            <td>{{ especialidades }}</td>       
                                         </tr>
                                     </tbody>
                                 </table>
